chap-15-advenced views attributes in xml like readonly='1' and required='1' won't work or cause problems

--- a/odoo_project_test/views/model_b_one_2_many_views.xml
+++ b/odoo_project_test/views/model_b_one_2_many_views.xml
@@ -24,7 +24,7 @@
 
                     it dose nothing for me
                     -->
-                  <field name="sequence" widget="handel"/>
+                  <field name="sequence" widget="handle"/>
                   <field name="numb"/>
                   <field name="model_a_ids"/>
                    <field name="max_fact"/>
