--- a/projet_test/views/model_b_one_2_many_views.xml
+++ b/projet_test/views/model_b_one_2_many_views.xml
@@ -22,9 +22,9 @@
                     # </list>
                     #and model_b_one_2_many for manuel oredering
 
-                    it dose nothing for me
+                    
                     -->
-                  <field name="sequence" widget="handel"/>
+                  <field name="sequence" widget="handle"/>
                   <field name="numb"/>
                   <field name="model_a_ids"/>
                   <field name="max_fact"/>
