--- a/odoo_project_test/views/model_b_one_2_many_views.xml
+++ b/odoo_project_test/views/model_b_one_2_many_views.xml
@@ -48,6 +48,29 @@
         <field name="arch" type="xml">
             <form string="Model b one2many form">
                 <sheet>
+                 <!-- here will add the stat button that will redirect to the model A
+                    we will put it inside a div decorated by class="oe_button_box"-->
+                    <div class="oe_button_box">
+                        <!--here we will put the stat buttons
+                        in button tag attributes:
+                        name for func of action in my case => name="action_open_model_a_ids"
+                        type="object" =>always
+                        class="oe_stat_button" => to decorate
+                        icon="fa-list" => for icon list from fa-icons 
+                        string="Model A" => text of button -->
+                        <button name="action_open_model_a_ids"
+                            type="object"
+                            class="oe_stat_button"
+                            icon="fa-list"
+                            string="Model A">
+                                <!--inside the button we will add a field that will have
+                                the number of records of the A model 
+                                this field attribute will have name of var action
+                                and widget for view in my case =>
+                                name="model_b_one2many_count" widget="line_count"-->
+                                <field name="model_b_one2many_count" widget="line_count"/>
+                        </button>    
+                    </div>
                     <group>
                         <field name="numb"/>
                         <field name="model_a_ids"/>
